--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website" />
     
     <!-- Favicon and Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo1.gif" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
